DSS-PEPPER-530-added-OSINST-logo-fix-align-center mor efix

--- a/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.scss
@@ -185,7 +185,7 @@
     height: 110px;
 }
 
-.social-media-logo.alignCenter {
+.alignCenter {
     text-align: center;
 }
 
